--- a/.travis.yml
+++ b/.travis.yml
@@ -27,12 +27,12 @@ script: |
               LOGFILE=/var/log/plancton/plancton.log
               DRAINFILE=/var/run/plancton/drain
               STOPFILE=/var/run/plancton/stop
-              CONFIGFILE=/etc/plancton/config.yaml ;;
+              CONFIGFILE=/var/run/plancton/config.yaml ;;
       nosudo) PIDFILE=$HOME/.plancton/run/plancton.pid
               LOGFILE=$HOME/.plancton/log/plancton.log
               DRAINFILE=$HOME/.plancton/run/drain
               STOPFILE=$HOME/.plancton/run/stop
-              CONFIGFILE=$HOME/.plancton/config.yaml;;
+              CONFIGFILE=$HOME/.plancton/run/config.yaml;;
     esac
 
     # Create databases and configuration
@@ -42,7 +42,7 @@ script: |
     done
 
     # Test Plancton startup
-    $MODE planctonctl start
+    $MODE planctonctl --confidr $CONFIGFILE start
     $MODE test -f $PIDFILE || dielog
     $MODE kill -0 $($MODE cat $PIDFILE) || dielog
 
@@ -61,7 +61,7 @@ script: |
     $MODE grep -qi "not starting containers, killing existing" $LOGFILE || dielog
 
     # Test Plancton drain and then stop mode
-    $MODE planctonctl start
+    $MODE planctonctl --confidr $CONFIGFILE start
     $MODE test -f $PIDFILE || dielog
     $MODE kill -0 $($MODE cat $PIDFILE) || dielog
     $MODE planctonctl drain-stop
