--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ services:
 
 language: python
 
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y jq
+
 install: |
   set -x
   git rev-parse HEAD
@@ -33,13 +37,6 @@ script: |
               STOPFILE=$HOME/.plancton/run/stop
               CONFDIR=$HOME/.plancton/run ;;
     esac
-
-    # Create databases and configuration
-    $MODE mkdir -p $CONFDIR/conf
-    echo -e "---\ninfluxdb_url:" | $MODE tee $CONFDIR/conf/config.yaml
-    for i in {1..3}; do
-      echo "  - http://0.0.0.0:$(docker run -d -P influxdb | xargs docker port | awk '{print $3}' | cut -d':' -f2)#plancton-monitor" | $MODE tee -a $CONFDIR/conf/config.yaml
-    done
 
     # Test Plancton startup
     $MODE planctonctl --confdir $CONFDIR start
@@ -75,4 +72,23 @@ script: |
     # Test Plancton stop
     $MODE planctonctl stop
     ! $MODE test -f $PIDFILE || dielog
+
+    # Test Plancton multi-streaming
+    $MODE mkdir -p $CONFDIR/conf
+    echo -e "---\ninfluxdb_url:" | $MODE tee $CONFDIR/conf/config.yaml                                                                                   done
+    for i in {1..3}; do
+      echo "  - http://0.0.0.0:$(docker run -d -P influxdb | xargs docker port | awk '{print $3}' | cut -d':' -f2 | tee -a ports)#plancton-monitor" |\
+        $MODE tee -a $CONFDIR/conf/config.yaml
+    done
+    $MODE planctonctl --confdir $CONFDIR start
+    sleep 60
+    for i in $(cat ports); do
+      GOOD_RET_VAL=$(curl -s http://0.0.0.0:$i/query?pretty=true --data db=plancton-monitor --data-urlencode 'q=SELECT COUNT(*) FROM "measurement"' |\
+        jq '.results[0].series[0].values[0][1]')
+      [[ "$GOOD_RET_VAL" -gt "0" ]] && echo "Test good query ($i) -> success" || dielog
+      BAD_RET_VAL=$(curl -s http://0.0.0.0:$i/query?pretty=true --data db=plancton-monitorBAD --data-urlencode 'q=SELECT COUNT(*) FROM "measuentBAD"' |\
+        jq '.results[0].series[0].values[0][1]')
+      [[ "$BAD_RET_VAL" == "null" ]] && echo "Test bad query ($i) -> success" || dielog
+    done
+    $MODE rm -f ports
   done
