--- a/.travis.yml
+++ b/.travis.yml
@@ -74,6 +74,7 @@ script: |
     ! $MODE test -f $PIDFILE || dielog
 
     # Test Plancton multi-streaming
+    $MODE rm -f $DRAINFILE
     $MODE mkdir -p $CONFDIR
     echo -e "---\ninfluxdb_url:" | $MODE tee $CONFDIR/config.yaml
     for i in {1..3}; do
