--- a/.travis.yml
+++ b/.travis.yml
@@ -76,21 +76,21 @@ script: |
     # Test Plancton multi-streaming
     $MODE rm -f $DRAINFILE || true
     $MODE mkdir -p $CONFDIR
-    echo -e "---\ninfluxdb_url:" | $MODE tee $CONFDIR/config.yaml
-    for i in {1..3}; do
-      echo "  - http://0.0.0.0:$(docker run -d -P influxdb | xargs docker port | awk '{print $3}' | cut -d':' -f2 | tee -a ports)#plancton-monitor" |\
+    echo "influxdb_url:" | $MODE tee $CONFDIR/config.yaml
+    for I in {1..2}; do
+      echo "- http://0.0.0.0:$(docker run -d -P influxdb | xargs docker port | awk '{print $3}' | cut -d: -f2 | tee -a influxdb_ports)#plancton-monitor" | \
         $MODE tee -a $CONFDIR/config.yaml
     done
 
     $MODE planctonctl --confdir=$CONFDIR start
     sleep 60
-    for i in $(cat ports); do
-      GOOD_RET_VAL=$(curl -s http://0.0.0.0:$i/query?pretty=true --data db=plancton-monitor --data-urlencode 'q=SELECT COUNT(*) FROM "measurement"' |\
+    for PORT in $(cat influxdb_ports); do
+      OUT=$(curl -s http://0.0.0.0:$PORT/query?pretty=true --data db=plancton-monitor --data-urlencode 'q=SELECT COUNT(*) FROM "measurement"' | \
         jq '.results[0].series[0].values[0][1]')
-      [[ "$GOOD_RET_VAL" -gt "0" ]] && echo "Test good query ($i) -> success" || dielog
-      BAD_RET_VAL=$(curl -s http://0.0.0.0:$i/query?pretty=true --data db=plancton-monitorBAD --data-urlencode 'q=SELECT COUNT(*) FROM "measuentBAD"' |\
+      [[ $OUT -gt 0 ]] || { echo "ERROR: InfluxDB good query on port $PORT returned $OUT"; dielog; }
+      OUT=$(curl -s http://0.0.0.0:$PORT/query?pretty=true --data db=plancton-monitor-nope --data-urlencode 'q=SELECT COUNT(*) FROM "measurement"' | \
         jq '.results[0].series[0].values[0][1]')
-      [[ "$BAD_RET_VAL" == "null" ]] && echo "Test bad query ($i) -> success" || dielog
+      [[ $OUT == null ]] || { echo "ERROR: InfluxDB bad query on port $PORT returned $OUT"; dielog; }
     done
-    $MODE rm -f ports
+    $MODE rm -f influxdb_ports
   done
