--- a/.travis.yml
+++ b/.travis.yml
@@ -77,25 +77,38 @@ script: |
     $MODE rm -f $DRAINFILE || true
     $MODE mkdir -p $CONFDIR
     echo "influxdb_url:" | $MODE tee $CONFDIR/config.yaml
-    for I in {1..2}; do
-      echo "- http://0.0.0.0:$(docker run -d -P influxdb | xargs docker port | awk '{print $3}' | cut -d: -f2 | tee -a influxdb_ports)#plancton-monitor" | \
-        $MODE tee -a $CONFDIR/config.yaml
-    done
+
+    # http + admin user
+    PORT=$(docker run -d -P influxdb | xargs docker port | awk '{print $3}' | cut -d: -f2 | tee -a influxdb_ports)
+    echo "- http://0.0.0.0:$PORT#plancton-monitor" | $MODE tee -a $CONFDIR/config.yaml
+
+    # http + unpriv user
+    PORT=$(docker run -d -P influxdb bash -xec "influxd -pidfile /pid & sleep 3 && influx -execute 'CREATE USER admin WITH PASSWORD '\''pwd'\''WITH ALL PRIVILEGES' && kill -15 \$(cat /pid) && sleep 3 && INFLUXDB_HTTP_AUTH_ENABLED=true influxd" | xargs docker port | awk '{print $3}' | cut -d: -f2 | tee -a influxdb_ports)
+    sleep 15
+    docker run -it --rm --network=host influxdb influx -username admin -password pwd -host 0.0.0.0 -port $PORT -execute "CREATE USER unpippo WITH PASSWORD 'unpassword'; CREATE DATABASE \"plancton-monitor\"; GRANT WRITE ON \"plancton-monitor\" TO unpippo;"
+    echo "- http://unpippo:unpassword@0.0.0.0:$PORT#plancton-monitor" | $MODE tee -a $CONFDIR/config.yaml
+
     openssl req -x509 -newkey rsa:4096 -nodes -subj "/CN=fuffadomain.com" -keyout key.pem -out cert.pem -days 365
-    for I in {1..2}; do
-      echo "- insecure_https://0.0.0.0:$(docker run -d -v $PWD/cert.pem:/cert.pem -v $PWD/key.pem:/key.pem -e INFLUXDB_HTTP_HTTPS_ENABLED=true -e INFLUXDB_HTTP_HTTPS_CERTIFICATE=/cert.pem -e INFLUXDB_HTTP_HTTPS_PRIVATE_KEY=/key.pem -P influxdb | xargs docker port | awk '{print $3}' | cut -d: -f2 | tee -a influxdb_ports_https)#plancton-monitor" | \
-        $MODE tee -a $CONFDIR/config.yaml
-    done
+
+    # https + admin user
+    PORT=$(docker run -d -v $PWD/cert.pem:/cert.pem -v $PWD/key.pem:/key.pem -e INFLUXDB_HTTP_HTTPS_ENABLED=true -e INFLUXDB_HTTP_HTTPS_CERTIFICATE=/cert.pem -e INFLUXDB_HTTP_HTTPS_PRIVATE_KEY=/key.pem -P influxdb | xargs docker port | awk '{print $3}' | cut -d: -f2 | tee -a influxdb_ports_https)
+    echo "- insecure_https://0.0.0.0:$PORT#plancton-monitor" | $MODE tee -a $CONFDIR/config.yaml
+
+    # https + unpriv user
+    PORT=$(docker run -d -v $PWD/cert.pem:/cert.pem -v $PWD/key.pem:/key.pem -e INFLUXDB_HTTP_HTTPS_ENABLED=true -e INFLUXDB_HTTP_HTTPS_CERTIFICATE=/cert.pem -e INFLUXDB_HTTP_HTTPS_PRIVATE_KEY=/key.pem -P influxdb bash -xec "influxd -pidfile /pid & sleep 3 && influx -ssl -unsafeSsl -execute 'CREATE USER admin WITH PASSWORD '\''pwd'\''WITH ALL PRIVILEGES' && kill -15 \$(cat /pid) && sleep 3 && INFLUXDB_HTTP_AUTH_ENABLED=true influxd" | xargs docker port | awk '{print $3}' | cut -d: -f2 | tee -a influxdb_ports_https)
+    sleep 15
+    docker run -it --rm --network=host influxdb influx -username admin -password pwd -ssl -unsafeSsl -host 0.0.0.0 -port $PORT -execute "CREATE USER unpippo WITH PASSWORD 'unpassword'; CREATE DATABASE \"plancton-monitor\"; GRANT WRITE ON \"plancton-monitor\" TO unpippo;"
+    echo "- insecure_https://unpippo:unpassword@0.0.0.0:$PORT#plancton-monitor" | $MODE tee -a $CONFDIR/config.yaml
 
     $MODE planctonctl --confdir=$CONFDIR start
     sleep 60
     PROTO=http
     for PORT in $(cat influxdb_ports) https $(cat influxdb_ports_https); do
       [[ $PORT == https ]] && { PROTO=https; continue; } || true
-      OUT=$(curl -ks $PROTO://0.0.0.0:$PORT/query?pretty=true --data db=plancton-monitor --data-urlencode 'q=SELECT COUNT(*) FROM "measurement"' | \
+      OUT=$(curl -ks $PROTO://admin:pwd@0.0.0.0:$PORT/query?pretty=true --data db=plancton-monitor --data-urlencode 'q=SELECT COUNT(*) FROM "measurement"' | \
         jq '.results[0].series[0].values[0][1]')
       [[ $OUT -gt 0 ]] || { echo "ERROR: InfluxDB good query on port $PORT returned $OUT"; dielog; }
-      OUT=$(curl -ks $PROTO://0.0.0.0:$PORT/query?pretty=true --data db=plancton-monitor-nope --data-urlencode 'q=SELECT COUNT(*) FROM "measurement"' | \
+      OUT=$(curl -ks $PROTO://admin:pwd@0.0.0.0:$PORT/query?pretty=true --data db=plancton-monitor-nope --data-urlencode 'q=SELECT COUNT(*) FROM "measurement"' | \
         jq '.results[0].series[0].values[0][1]')
       [[ $OUT == null ]] || { echo "ERROR: InfluxDB bad query on port $PORT returned $OUT"; dielog; }
     done
